# cpp_skeleton

./: CMakeLists.txt
CMake/Modules/: Define_CompilerFlags.cmake
lib/: CMakeLists.txt  TestFile.cpp  TestFile.hpp
src/: CMakeLists.txt  main.cpp
